# liteyukibot-plugin-antidislink

./: .gitignore  README.md  main.py  pyproject.toml
liteyukibot_plugin_antidislink/: __init__.py
src/liteyukibot_plugin_antidislink/: __init__.py
